--- a/package.json
+++ b/package.json
@@ -28,7 +28,19 @@
   },
   "homepage": "https://github.com/beginor/rollup-starter#readme",
   "dependencies": {
-    "tslib": "^2.2.0"
+    "@angular/core": "~12.0.4",
+    "@angular/common": "~12.0.4",
+    "@angular/compiler": "~12.0.4",
+    "@angular/animations": "~12.0.4",
+    "@angular/forms": "~12.0.4",
+    "@angular/platform-browser": "~12.0.4",
+    "@angular/platform-browser-dynamic": "~12.0.4",
+    "@angular/router": "~12.0.4",
+    "@angular/cdk": "~12.0.4",
+    "@angular/material": "~12.0.4",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "rollup": "^2.51.1",
@@ -38,6 +50,7 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "rollup-plugin-ngc": "^0.1.2"
   }
 }
