--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "browser-sync": "browser-sync start --config bs-config.js",
     "rollup": "rollup -c rollup.config.js",
     "rollup-watch": "npm run rollup -- --watch",
-    "start": "npm run clean && npm run copy-libs && concurrently 'npm run browser-sync' 'npm run rollup-watch'",
+    "start": "npm run clean && npm run copy-libs && concurrently 'npm run browser-sync' 'npm run ngc-web-watch' 'npm run rollup-watch'",
     "test": "echo test",
+    "ngcc": "NG_PERSISTENT_BUILD_CACHE=1 ngcc",
     "ngc-web": "ngc -p projects/web/tsconfig.app.json",
+    "ngc-web-watch": "npm run ngc-web -- -w",
+    "watch-web": "concurrently 'npm run ngc-web-watch' 'npm run rollup-watch'",
     "ng": "NG_PERSISTENT_BUILD_CACHE=1 ng",
-    "build-all": "npm run build-shared && npm run build-web && npm run build-handset",
-    "build-shared": "NG_PERSISTENT_BUILD_CACHE=1 ng build app-shared --configuration production",
-    "build-web": "NG_PERSISTENT_BUILD_CACHE=1 ng build web --configuration production --base-href=/net-core-app/web/",
-    "build-handset": "NG_PERSISTENT_BUILD_CACHE=1 ng build handset --configuration production --base-href=/net-core-app/handset/",
-    "watch-web": "NG_PERSISTENT_BUILD_CACHE=1 ng build web --watch --configuration development --base-href=/net-core-app/web/",
-    "watch-handset": "NG_PERSISTENT_BUILD_CACHE=1 ng build handset --watch --configuration development --base-href=/net-core-app/handset/"
+    "build-shared": "NG_PERSISTENT_BUILD_CACHE=1 ng build app-shared --configuration development"
   },
   "repository": {
     "type": "git",
@@ -40,18 +38,19 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "tslib": "^2.3.0",
-    "@angular/animations": "~12.1.0",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/core": "~12.1.0",
-    "@angular/forms": "~12.1.0",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
-    "@angular/cdk": "~12.1.0",
-    "@angular/material": "~12.1.0",
+    "@angular/animations": "~12.1.1",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
+    "@angular/forms": "~12.1.1",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
+    "@angular/cdk": "~12.1.1",
+    "@angular/material": "~12.1.1",
     "rxjs": "~6.6.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/localize": "~12.1.1"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.16",
@@ -66,10 +65,10 @@
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.3.5",
-    "@angular-devkit/build-angular": "~12.1.0",
-    "@angular/cli": "~12.1.0",
-    "@angular/compiler-cli": "~12.1.0",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
     "ng-packagr": "^12.1.0",
-    "rollup-plugin-ngc": "^0.1.2"
+    "@types/node": "^12.11.1"
   }
 }
