--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "@angular/material": "~12.1.1",
     "rxjs": "~6.6.0",
     "zone.js": "~0.11.4",
-    "@angular/localize": "~12.1.1"
+    "@angular/localize": "~12.1.1",
+    "devextreme": "^21.1.4",
+    "devextreme-angular": "^21.1.4"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.0.16",
