--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "@angular/router": "~12.2.0",
     "@angular/cdk": "~12.2.0",
     "@angular/material": "~12.2.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.0",
     "zone.js": "~0.11.4",
     "@angular/localize": "~12.2.0",
-    "devextreme": "^21.1.5",
-    "devextreme-angular": "^21.1.5"
+    "devextreme": "^21.1.6",
+    "devextreme-angular": "^21.1.6"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.6",
@@ -69,11 +69,11 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "sass": "^1.42.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.3.5",
     "esbuild": "^0.13.4",
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular/cli": "~12.2.0",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "~12.2.9",
+    "@angular/cli": "~12.2.9",
+    "@angular/compiler-cli": "~12.2.9",
     "ng-packagr": "^12.2.0",
     "@types/node": "^12.11.1"
   }
