--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "zone.js": "~0.11.4",
     "@angular/localize": "~12.2.0",
     "devextreme": "^21.1.6",
-    "devextreme-angular": "^21.1.6"
+    "devextreme-angular": "^21.1.6",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.6",
