--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "browser-sync": "browser-sync start --config bs-config.js",
     "rollup": "rollup -c rollup.config.js",
     "rollup-watch": "pnpm run rollup -- --watch",
-    "dev": "pnpm run clean-app && concurrently 'pnpm run browser-sync' 'pnpm run rollup-watch'",
+    "dev": "pnpm run clean-app && concurrently 'pnpm run browser-sync' 'pnpm run watch-web'",
     "start": "pnpm run clean && pnpm run dev",
     "test": "echo test",
     "ngcc": "ngcc",
@@ -40,23 +40,23 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "tslib": "^2.3.1",
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "@angular/cdk": "~12.2.0",
-    "@angular/material": "~12.2.0",
-    "rxjs": "^6.6.0",
+    "@angular/animations": "^13.1.1",
+    "@angular/common": "^13.1.1",
+    "@angular/compiler": "^13.1.1",
+    "@angular/core": "^13.1.1",
+    "@angular/forms": "^13.1.1",
+    "@angular/platform-browser": "^13.1.1",
+    "@angular/platform-browser-dynamic": "^13.1.1",
+    "@angular/router": "^13.1.1",
+    "@angular/cdk": "^13.1.1",
+    "@angular/material": "^13.1.1",
+    "rxjs": "^7.5.1",
     "zone.js": "~0.11.4",
-    "@angular/localize": "~12.2.0",
-    "devextreme": "^21.1.6",
-    "devextreme-angular": "^21.1.6",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.2",
-    "ng-zorro-antd": "^12.0.1"
+    "@angular/localize": "^13.1.1",
+    "devextreme": "^21.2.4",
+    "devextreme-angular": "^21.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
+    "ng-zorro-antd": "^13.0.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.8",
@@ -74,10 +74,10 @@
     "sass": "^1.45.2",
     "typescript": "^4.5.4",
     "esbuild": "^0.14.10",
-    "@angular-devkit/build-angular": "~12.2.9",
-    "@angular/cli": "~12.2.9",
-    "@angular/compiler-cli": "~12.2.9",
-    "ng-packagr": "^12.2.0",
+    "@angular-devkit/build-angular": "^13.1.2",
+    "@angular/cli": "^13.1.2",
+    "@angular/compiler-cli": "^13.1.1",
+    "ng-packagr": "^13.1.2",
     "@types/node": "^12.11.1"
   }
 }
