--- a/package.json
+++ b/package.json
@@ -40,23 +40,24 @@
     "bootstrap": "^5.1.3",
     "@types/bootstrap": "^5.1.9",
     "bootstrap-icons": "^1.8.0",
-    "tslib": "^2.3.1""@angular/animations": "^13.1.3",
-    "@angular/common": "^13.1.3",
-    "@angular/compiler": "^13.1.3",
-    "@angular/core": "^13.1.3",
-    "@angular/forms": "^13.1.3",
-    "@angular/platform-browser": "^13.1.3",
-    "@angular/platform-browser-dynamic": "^13.1.3",
-    "@angular/router": "^13.1.3",
-    "@angular/cdk": "^13.1.3",
-    "@angular/material": "^13.1.3",
+    "tslib": "^2.3.1",
+    "@angular/animations": "^13.2.1",
+    "@angular/common": "^13.2.1",
+    "@angular/compiler": "^13.2.1",
+    "@angular/core": "^13.2.1",
+    "@angular/forms": "^13.2.1",
+    "@angular/platform-browser": "^13.2.1",
+    "@angular/platform-browser-dynamic": "^13.2.1",
+    "@angular/router": "^13.2.1",
+    "@angular/cdk": "^13.2.1",
+    "@angular/material": "^13.2.1",
     "rxjs": "^7.5.1",
     "zone.js": "~0.11.4",
-    "@angular/localize": "^13.1.3",
-    "devextreme": "^21.2.4",
-    "devextreme-angular": "^21.2.4",
+    "@angular/localize": "^13.2.1",
+    "devextreme": "^21.2.5",
+    "devextreme-angular": "^21.2.5",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0-beta.4",
-    "ng-zorro-antd": "^13.0.0"
+    "ng-zorro-antd": "^13.0.1"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
@@ -73,10 +74,10 @@
     "sass": "^1.49.7",
     "typescript": "^4.5.5",
     "esbuild": "^0.14.19",
-    "@angular-devkit/build-angular": "^13.1.4",
-    "@angular/cli": "^13.1.4",
-    "@angular/compiler-cli": "^13.1.3",
-    "ng-packagr": "^13.1.3",
+    "@angular-devkit/build-angular": "^13.2.2",
+    "@angular/cli": "^13.2.2",
+    "@angular/compiler-cli": "^13.2.1",
+    "ng-packagr": "^13.2.1",
     "@types/node": "^12.11.1"
   }
 }
