try add ng-zorro

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "clean-app": "rm -rf dist/main.* dist/chunks",
     "browser-sync": "browser-sync start --config bs-config.js",
     "rollup": "rollup -c rollup.config.js",
-    "rollup-watch": "pnpm run rollup -- --watch",
+    "rollup-watch": "pnpm run rollup --watch",
     "dev": "pnpm run clean-app && concurrently 'pnpm run browser-sync' 'pnpm run watch-web'",
     "start": "pnpm run clean && pnpm run dev",
     "test": "echo test",
     "ngcc": "ngcc",
     "ngc-web": "ngc -p tsconfig.app.json",
-    "ngc-web-watch": "pnpm run ngc-web -- -w",
+    "ngc-web-watch": "pnpm run ngc-web -w",
     "watch-web": "concurrently 'pnpm run ngc-web-watch' 'pnpm run rollup-watch'",
     "ng": "ng",
     "build-shared": "ng build app-shared --configuration development"
