--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "pnpm run clean && pnpm run dev",
     "test": "echo test",
     "ngcc": "ngcc",
-    "ngc-web": "ngc -p tsconfig.app.json",
+    "ngc-web": "ngc -p projects/web/tsconfig.app.json",
     "ngc-web-watch": "pnpm run ngc-web -w",
     "watch-web": "concurrently 'pnpm run ngc-web-watch' 'pnpm run rollup-watch'",
     "ng": "ng",
@@ -37,27 +37,27 @@
   "homepage": "https://github.com/beginor/rollup-starter#readme",
   "dependencies": {
     "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "@types/bootstrap": "^5.1.12",
     "bootstrap-icons": "^1.8.3",
     "tslib": "^2.4.0",
-    "@angular/animations": "^13.3.11",
-    "@angular/common": "^13.3.11",
-    "@angular/compiler": "^13.3.11",
-    "@angular/core": "^13.3.11",
-    "@angular/forms": "^13.3.11",
-    "@angular/platform-browser": "^13.3.11",
-    "@angular/platform-browser-dynamic": "^13.3.11",
-    "@angular/router": "^13.3.11",
-    "@angular/cdk": "^13.3.9",
-    "@angular/material": "^13.3.9",
+    "@angular/animations": "^14.0.3",
+    "@angular/common": "^14.0.3",
+    "@angular/compiler": "^14.0.3",
+    "@angular/core": "^14.0.3",
+    "@angular/forms": "^14.0.3",
+    "@angular/platform-browser": "^14.0.3",
+    "@angular/platform-browser-dynamic": "^14.0.3",
+    "@angular/router": "^14.0.3",
+    "@angular/cdk": "^14.0.3",
+    "@angular/material": "^14.0.3",
     "rxjs": "^7.5.4",
     "zone.js": "~0.11.4",
-    "@angular/localize": "^13.3.11",
-    "devextreme": "^21.2.7",
-    "devextreme-angular": "^21.2.7",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
-    "ng-zorro-antd": "^13.2.1"
+    "@angular/localize": "^14.0.3",
+    "devextreme": "^22.1.3",
+    "devextreme-angular": "^22.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0-beta.1",
+    "ng-zorro-antd": "^13.3.1"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
@@ -74,10 +74,9 @@
     "sass": "^1.52.3",
     "typescript": "^4.7.4",
     "esbuild": "^0.14.46",
-    "@angular-devkit/build-angular": "^13.3.7",
-    "@angular/cli": "^13.3.7",
-    "@angular/compiler-cli": "^13.3.11",
-    "ng-packagr": "^13.3.1",
-    "@types/node": "^12.11.1"
+    "@angular-devkit/build-angular": "^14.0.3",
+    "@angular/cli": "^14.0.3",
+    "@angular/compiler-cli": "^14.0.3",
+    "ng-packagr": "^14.0.2"
   }
 }
