--- a/projects/web/tsconfig.app.json
+++ b/projects/web/tsconfig.app.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "src",
+    "outDir": "./out-tsc/",
     "types": []
   },
   "files": [
